# CodeGreen-kenyaAiChallenge

./: .gitignore  README.md  setup.md
backend/: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test.py
backend/api/: ai.py  app.py  farmers.py  relationship.py  response.py  trust.py  ussd.py  verification.py  verification_sources.py
backend/core/: config.py  database.py
backend/graph/: schema.py
backend/parsers/: parser.py
backend/prompts/: explainability_prompt.py
backend/repositories/: ai_explanation_repository.py  base_repository.py  buyer_testimonial_repository.py  farmer_repository.py  institution_repository.py  market_actor_repository.py  participant_response_repository.py  question_repository.py  relationship_repositoy.py  response_repository.py  score_repository.py  settlement_repository.py  socialgroup_repository.py  testimonial_repository.py  trust_source_repository.py  verification_log_repository.py  verification_repository.py  verification_session_repository.py
backend/schemas/: buyer_testimonial.py  farm.py  farmer.py  financial_signal.py  inkind_settlement.py  institution.py  loan.py  market_actor.py  notification.py  recommendation.py  relationship.py  score_profile.py  social_group.py  testimonial.py  trust_source.py  verification_request.py  verification_response.py  verification_session.py  verify_session.py
backend/scripts/: init_graph.py  test_farmer.py  test_gemini.py  test_scoring.py
backend/services/: aggregation_service.py  explainability_service.py  farmer_service.py  gemini_service.py  graph_service.py  (+11 more)
(+8 files in other folders)
